--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,7 +11,7 @@ jobs:
     - name: rsync deployment
       uses: burnett01/rsync-deployments@5.2
       with:
-        switches: -avzr --delete
+        switches: -avzr --delete --exclude-from='rsync-exclude.txt'
         path: ./
         remote_path: /var/www/staging/
         remote_host: ${{ secrets.SSH_HOST }}
