--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,11 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '17.x'
+    - run: npm run build
     - name: rsync deployment
       uses: burnett01/rsync-deployments@5.2
       with:
         switches: -avzr --delete --exclude-from='rsync-exclude.txt'
-        path: ./
+        path: ./build/
         remote_path: /var/www/staging/
         remote_host: ${{ secrets.SSH_HOST }}
         remote_user: ${{ secrets.SSH_USER }}
