--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": "off"
+    }
   },
   "devDependencies": {
     "bulma": "^0.9.3",
