--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
       "react-app/jest"
     ],
     "rules": {
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "jsx-a11y/anchor-is-valid": "off",
+      "jsx-a11y/anchor-has-content": "off"
+  
     }
   },
   "browserslist": {
